openFeign实现服务调用，Hystrix实现服务降级和服务熔断 Springcloud gateway实现微服务网关

--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,9 @@
         <module>order-cunsumer-zk</module>
         <module>consul-provider-payment8006</module>
       <module>cloud-consumer-consul-order80</module>
+        <module>cloud-openfeign-order80</module>
+      <module>cloud-hystrix-dashboard9001</module>
+        <module>cloud-gateway9527</module>
     </modules>
     <packaging>pom</packaging>
 
