--- a/cloud-eureka-server7001/src/main/resources/application.yml
+++ b/cloud-eureka-server7001/src/main/resources/application.yml
@@ -11,8 +11,8 @@ eureka:
     fetch-registry: false
     service-url:
       #设置与Eureka Server之间交互的地址，查询服务和注册服务都需要依赖这个地址
-      defaultZone: http://eureka7002.com:7002/eureka/ #集群版,指向其他Eureka
-      #defaultZone: http://eureka7001.com:7001/eureka/ #单机版,指向自己
+      #defaultZone: http://eureka7002.com:7002/eureka/ #集群版,指向其他Eureka
+      defaultZone: http://eureka7001.com:7001/eureka/ #单机版,指向自己
     #server:
     #关闭Eureka自我保护机制，保证不可用服务被及时剔除
     #enable-self-preservation: false
