spring cloud config,bus,stream,spring cloud alibaba

--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,16 @@
         <module>cloud-openfeign-order80</module>
       <module>cloud-hystrix-dashboard9001</module>
         <module>cloud-gateway9527</module>
+        <module>cloud-config-server-3344</module>
+        <module>cloud-config-client-3355</module>
+        <module>cloud-config-client-3366</module>
+        <module>cloud-stream-rabbitmq-provider8801</module>
+        <module>cloud-stream-rabbitmq-consumer8802</module>
+        <module>cloud-stream-rabbitmq-consumer8803</module>
+        <module>cloudalibaba-provider-payment9001</module>
+      <module>cloudalibaba-provider-payment9002</module>
+        <module>cloudalibaba-consumer-nacos-order83</module>
+        <module>cloudalibaba-sentinel-service8401</module>
     </modules>
     <packaging>pom</packaging>
 
@@ -58,10 +68,11 @@
         <scope>import</scope>
       </dependency>
       <!-- springcloud cloud alibaba 2.1.0.RELEASE -->
+      <!-- 更新为2.2.5.RELEASE-->
       <dependency>
         <groupId>com.alibaba.cloud</groupId>
         <artifactId>spring-cloud-alibaba-dependencies</artifactId>
-        <version>2.1.0.RELEASE</version>
+        <version>2.2.5.RELEASE</version>
         <type>pom</type>
         <scope>import</scope>
       </dependency>
